--- a/views/seller/store_panel/add_my_store.erb
+++ b/views/seller/store_panel/add_my_store.erb
@@ -15,37 +15,37 @@
                 <div class="mb-3 row">
                     <label for="name" class="col-sm-2 col-form-label">Name</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="name" name="name" value="#">
+                        <input type="text" class="form-control" id="name" name="name">
                     </div>
                 </div>
                 <div class="mb-3 row">
                     <label for="username" class="col-sm-2 col-form-label">Username</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="username" name="username" value="">
+                        <input type="text" class="form-control" id="username" name="username">
                     </div>
                 </div>
                 <div class="mb-3 row">
                     <label for="email" class="col-sm-2 col-form-label">Email</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="email" name="email" value="">
+                        <input type="email" class="form-control" id="email" name="email">
                     </div>
                 </div> 
                 <div class="mb-3 row">
                     <label for="birthdate" class="col-sm-2 col-form-label">Birthdate</label>
                     <div class="col-sm-10">
-                        <input type="date" class="form-control" id="birthdate" name="birthdate" value="">
+                        <input type="date" class="form-control" id="birthdate" name="birthdate">
                     </div>
                 </div>
                 <div class="mb-3 row">
                     <label for="address" class="col-sm-2 col-form-label">Address</label>
                     <div class="col-sm-10">
-                        <textarea type="text" class="form-control" id="address" name="address" value="#"></textarea></textarea>
+                        <textarea type="text" class="form-control" id="address" name="address"></textarea>
                     </div>
                 </div>
                 <div class="mb-3 row">
                     <label for="phone" class="col-sm-2 col-form-label">Phone</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="phone" name="phone" value="#">
+                        <input type="number" class="form-control" id="phone" name="phone">
                     </div>
                 </div>
                 <div class="mb-3 row">
