--- a/views/seller/store_panel/add_my_store.erb
+++ b/views/seller/store_panel/add_my_store.erb
@@ -13,39 +13,32 @@
                     <input type="hidden" name="_method" value="post">
                 </div>
                 <div class="mb-3 row">
-                    <label for="name" class="col-sm-2 col-form-label">Name</label>
+                    <label for="store_name" class="col-sm-2 col-form-label">Store Name</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="name" name="name">
+                        <input type="text" class="form-control" id="store_name" name="store_name">
                     </div>
                 </div>
                 <div class="mb-3 row">
-                    <label for="username" class="col-sm-2 col-form-label">Username</label>
+                    <label for="store_address" class="col-sm-2 col-form-label">Store Address</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="username" name="username">
+                        <textarea type="text" class="form-control" id="store_address" name="store_address"></textarea>
                     </div>
                 </div>
                 <div class="mb-3 row">
-                    <label for="email" class="col-sm-2 col-form-label">Email</label>
+                    <label for="cs_number" class="col-sm-2 col-form-label">Customer Service Number</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="email" name="email">
-                    </div>
-                </div> 
-                <div class="mb-3 row">
-                    <label for="birthdate" class="col-sm-2 col-form-label">Birthdate</label>
-                    <div class="col-sm-10">
-                        <input type="date" class="form-control" id="birthdate" name="birthdate">
+                        <input type="number" class="form-control" id="cs_number" name="cs_number">
                     </div>
                 </div>
+
                 <div class="mb-3 row">
-                    <label for="address" class="col-sm-2 col-form-label">Address</label>
+                    <label for="store_status" class="col-sm-2 col-form-label">Status</label>
                     <div class="col-sm-10">
-                        <textarea type="text" class="form-control" id="address" name="address"></textarea>
-                    </div>
-                </div>
-                <div class="mb-3 row">
-                    <label for="phone" class="col-sm-2 col-form-label">Phone</label>
-                    <div class="col-sm-10">
-                        <input type="number" class="form-control" id="phone" name="phone">
+                        <select class="form-select" id="store_status" name="store_status">
+                            <option selected>Open this select menu</option>
+                            <option value="Active">Active</option>
+                            <option value="Inactive">Incative</option>
+                        </select>
                     </div>
                 </div>
                 <div class="mb-3 row">
@@ -58,6 +51,7 @@
                         <input class="form-control" type="file" id="store_banner" name="store_banner">
                     </div>
                 </div>
+
                 <!-- Submit Button -->
                 <button type="submit" class="btn btn-outline-primary float-end">Submit</button>
             </form>
