update store_lists page

--- a/views/admin/seller_dashboard/store_lists.erb
+++ b/views/admin/seller_dashboard/store_lists.erb
@@ -17,7 +17,48 @@
                 </div>
                 <% session[:success] = nil %>
             <% end %>
-            
+            <table id="datatablesSimple">
+                <thead>
+                    <tr>
+                        <th>
+                            No
+                        </th>
+                        <th>
+                            Store Owner
+                        </th>
+                        <th>
+                            Store Name
+                        </th>
+                        <th>
+                            Store Photo 
+                        </th>
+                        <th>
+                            Store Banner
+                        </th>
+                        <th>
+                            Store Address 
+                        </th>
+                        <th>
+                            Customer Service Number
+                        </th>
+                        <th>
+                            Store Status 
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
