--- a/views/admin/seller_dashboard/store_lists.erb
+++ b/views/admin/seller_dashboard/store_lists.erb
@@ -44,6 +44,9 @@
                         <th>
                             Store Status 
                         </th>
+                        <th>
+                            Action 
+                        </th>
                     </tr>
                 </thead>
                 <tbody>
@@ -53,9 +56,8 @@
                                 <%= index + 1 %>
                             </td>
                             <td>
-                                <%= store["owner_name"] %> (<%store["owner_username"]%>)
+                                <%= store["owner_name"] %>
                                 <br>
-                                <small><%= store["owner_email"] %></small>
                             </td>
                             <td>
                                 <%= store["store_name"]%>
@@ -82,6 +84,11 @@
                                 <% else %>
                                     <span class="badge bg-danger">Closed</span>
                                 <% end %>
+                            </td>
+                            <td>
+                                <button type="submit" class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#" >
+                                    <i class="fa-solid fa-trash"></i>
+                                </button>
                             </td>
                         </tr>
                     <% end %>
