--- a/views/admin/user_dashboard/edit.erb
+++ b/views/admin/user_dashboard/edit.erb
@@ -92,7 +92,7 @@
                     <% end %>
                 </div>
                 <button type="submit" class="btn btn-primary float-end">Submit</button>
-                <a class="btn btn-outline-secondary float-start" href="/admin"><i class="fa-solid fa-arrow-left"></i> Back</a>
+                <a class="btn btn-outline-secondary float-start" href="/user_lists"><i class="fa-solid fa-arrow-left"></i> Back</a>
             </form>
         </div>
     </div>
