--- a/views/admin/user_dashboard/view.erb
+++ b/views/admin/user_dashboard/view.erb
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <!-- Back Button -->
-            <a class="btn btn-outline-secondary float-start" href="/admin"><img src="/uploads/items/arrow-left-circle.svg" width="30px"/> Back</a>
+            <a class="btn btn-outline-secondary float-start" href="/user_lists"><img src="/uploads/items/arrow-left-circle.svg" width="30px"/> Back</a>
         </div>
     </div>
 </div>
