update view_detail & seller_lists pages

--- a/views/admin/seller_dashboard/seller_lists.erb
+++ b/views/admin/seller_dashboard/seller_lists.erb
@@ -55,7 +55,7 @@
                             <td>
                                 <div class="btn-group-sm btn-group" role="group" aria-label="Button Group">
                                     <button type="submit" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal<%= seller['seller_id'] %>">Delete</button>
-                                    <a href="#" class="btn btn-info text-white">View</a>
+                                    <a href="/view_seller_detail/<%= seller['seller_id'] %>" class="btn btn-info text-white">View</a>
                                 </div>
                             </td>
                         </tr>
