--- a/views/admin/seller_dashboard/view_detail.erb
+++ b/views/admin/seller_dashboard/view_detail.erb
@@ -10,65 +10,66 @@
             View 
         </div>
         <div class="card-body">
-            <% if session[:success] %>
-                <div class="alert alert-success alert-dismissible fade show" role="alert">
-                    <%= session[:success] %>
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-                <% session[:success] = nil %>
-            <% end %>
             <div class="mb-3 row">
                 <label for="name" class="col-sm-2 col-form-label">Name</label>
                 <div class="col-sm-10">
-                    <input type="text" readonly class="form-control-plaintext" id="name" value="#">
+                    <input type="text" readonly class="form-control-plaintext" id="name" value="<%= @seller['name'] %>">
                 </div>
             </div>
             <div class="mb-3 row">
                 <label for="username" class="col-sm-2 col-form-label">Username</label>
                 <div class="col-sm-10">
-                    <input type="text" readonly class="form-control-plaintext" id="username" value="#">
+                    <input type="text" readonly class="form-control-plaintext" id="username" value="<%= @seller['username'] %>">
                 </div>
             </div>
             <div class="mb-3 row">
                 <label for="email" class="col-sm-2 col-form-label">Email</label>
                 <div class="col-sm-10">
-                    <input type="text" readonly class="form-control-plaintext" id="email" value="#">
+                    <input type="text" readonly class="form-control-plaintext" id="email" value="<%= @seller['email'] %>">
                 </div>
             </div>
             <div class="mb-3 row">
                 <label for="birthdate" class="col-sm-2 col-form-label">Birthdate</label>
                 <div class="col-sm-10">
-                    <input type="text" readonly class="form-control-plaintext" id="birthdate" value="#">
+                    <input type="text" readonly class="form-control-plaintext" id="birthdate" value="<%= @seller['birthdate'] %>">
                 </div>
             </div>
             <div class="mb-3 row">
                 <label for="age" class="col-sm-2 col-form-label">Age</label>
                 <div class="col-sm-10">
-                    <input type="text" readonly class="form-control-plaintext" id="age" value="#">
+                    <input type="text" readonly class="form-control-plaintext" id="age" value="<%= @seller['age'] || 'N/A' %>">
                 </div>
             </div>
             <div class="mb-3 row">
                 <label for="address" class="col-sm-2 col-form-label">Address</label>
                 <div class="col-sm-10">
-                    <input type="text" readonly class="form-control-plaintext" id="address" value="#">
+                    <input type="text" readonly class="form-control-plaintext" id="address" value="<%= @seller['address'] %>">
                 </div>
             </div>
             <div class="mb-3 row">
                 <label for="phone" class="col-sm-2 col-form-label">Phone</label>
                 <div class="col-sm-10">
-                    <input type="text" readonly class="form-control-plaintext" id="phone" value="#">
+                    <input type="text" readonly class="form-control-plaintext" id="phone" value="<%= @seller['phone'] %>">
                 </div>
             </div>
             <div class="mb-3 row">
                 <label for="access" class="col-sm-2 col-form-label" for="photo">Photo</label>
                 <div class="col-sm-10">
-                    <img src="..." style="max-width: 200px">
+                    <% if @seller['photo'] %>
+                        <img src="/uploads/users/<%= @seller['photo'] %>" style="max-width: 200px">
+                    <% else %>
+                        <p>No Photo Available</p>
+                    <% end %>
                 </div>
             </div>
             <div class="mb-3 row">
                 <label for="identity_photo" class="col-sm-2 col-form-label">Identity Verification</label>
                 <div class="col-sm-10">
-                    <img src="..." style="max-width: 200px">
+                    <% if @seller['identity_photo'] %>
+                        <img src="/uploads/sellers/<%= @seller['identity_photo'] %>" style="max-width: 200px">
+                    <% else %>
+                        <p>No Identity Photo Available</p>
+                    <% end %>
                 </div>
             </div>
             <!-- Back Button -->
