update view_detail & seller_lists pages

--- a/views/admin/seller_dashboard/view_detail.erb
+++ b/views/admin/seller_dashboard/view_detail.erb
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <!-- Back Button -->
-            <a class="btn btn-outline-secondary float-start" href="#"><img src="/uploads/items/arrow-left-circle.svg" width="30px"/> Back</a>
+            <a class="btn btn-outline-secondary float-start" href="/seller_lists"><img src="/uploads/items/arrow-left-circle.svg" width="30px"/> Back</a>
         </div>
     </div>
 
