--- a/views/admin/seller_dashboard/seller_lists.erb
+++ b/views/admin/seller_dashboard/seller_lists.erb
@@ -54,8 +54,8 @@
                             <td><%= seller['address'] %></td>
                             <td>
                                 <div class="btn-group-sm btn-group" role="group" aria-label="Button Group">
-                                    <button type="submit" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal<%= seller['seller_id'] %>">Delete</button>
-                                    <a href="/view_seller_detail/<%= seller['seller_id'] %>" class="btn btn-info text-white">View</a>
+                                    <button type="submit" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal<%= seller['seller_id'] %>"><i class="fa-solid fa-trash"></i></button>
+                                    <a href="/view_seller_detail/<%= seller['seller_id'] %>" class="btn btn-info text-white"><i class="fa-solid fa-eye"></i></a>
                                 </div>
                             </td>
                         </tr>
