--- a/views/admin/seller_dashboard/seller_lists.erb
+++ b/views/admin/seller_dashboard/seller_lists.erb
@@ -73,7 +73,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                        <form action="#" method="POST">
+                                        <form action="/delete_seller/<%= seller['seller_id'] %>" method="POST">
                                             <button type="submit" class="btn btn-primary">Delete</button>
                                         </form>
                                     </div>
