--- a/views/admin/store_dashboard/store_lists.erb
+++ b/views/admin/store_dashboard/store_lists.erb
@@ -106,7 +106,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                        <form action="#" method="POST">
+                                        <form action="/delete_store/<%= store['store_id'] %>" method="POST">
                                             <button type="submit" class="btn btn-primary">Delete</button>
                                         </form>
                                     </div>
