--- a/views/seller/store_panel/add_my_store.erb
+++ b/views/seller/store_panel/add_my_store.erb
@@ -8,6 +8,14 @@
             <i class="fas fa-user me-1"></i>
         </div>
         <div class="card-body">
+            <% if @errors && @errors.any? %>
+                <% @errors.each do |error| %>
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        <strong><%= error %></strong>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                <% end %>
+            <% end %>
             <form action="/add_my_store/<%= current_user['user_id'] %>" method="post" enctype="multipart/form-data">
                 <div class="mb-3">
                     <input type="hidden" name="_method" value="post">
@@ -37,7 +45,7 @@
                         <select class="form-select" id="store_status" name="store_status">
                             <option selected>Open this select menu</option>
                             <option value="Active">Active</option>
-                            <option value="Inactive">Incative</option>
+                            <option value="Inactive">Inactive</option>
                         </select>
                     </div>
                 </div>
