update store_lists page

--- a/views/admin/store_dashboard/store_lists.erb
+++ b/views/admin/store_dashboard/store_lists.erb
@@ -79,7 +79,7 @@
                                 <%= store["cs_number"] %>
                             </td>
                             <td>
-                                <% if store["store_status"] == "Open" %>
+                                <% if store["store_status"] == "Active" %>
                                     <span class="badge bg-success">Open</span>
                                 <% else %>
                                     <span class="badge bg-danger">Closed</span>
