--- a/views/seller/store_panel/add_my_store.erb
+++ b/views/seller/store_panel/add_my_store.erb
@@ -43,7 +43,7 @@
                     <label for="store_status" class="col-sm-2 col-form-label">Status</label>
                     <div class="col-sm-10">
                         <select class="form-select" id="store_status" name="store_status">
-                            <option selected>Open this select menu</option>
+                            <option value="" disabled selected>Open this select menu</option>
                             <option value="Active">Active</option>
                             <option value="Inactive">Inactive</option>
                         </select>
