update admin seller cards

--- a/views/admin/index.erb
+++ b/views/admin/index.erb
@@ -6,9 +6,9 @@
     <div class="row">
         <div class="col-xl-3 col-md-6">
             <div class="card bg-primary text-white mb-4">
-                <div class="card-body">Primary Card</div>
+                <div class="card-body"> <%= seller_count %> Seller</div>
                 <div class="card-footer d-flex align-items-center justify-content-between">
-                    <a class="small text-white stretched-link" href="#">View Details</a>
+                    <a class="small text-white stretched-link" href="/seller_lists">View Details</a>
                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                 </div>
             </div>
@@ -17,16 +17,16 @@
             <div class="card bg-warning text-white mb-4">
                 <div class="card-body"><i class="fas fa-user"></i> <%= user_count %> Users</div>
                 <div class="card-footer d-flex align-items-center justify-content-between">
-                    <a class="small text-white text-decoration-none" href="/admin">View Details</a>
+                    <a class="small text-white text-decoration-none" href="/user_lists">View Details</a>
                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                 </div>
             </div>
         </div>
         <div class="col-xl-3 col-md-6">
             <div class="card bg-success text-white mb-4">
-                <div class="card-body">Success Card</div>
+                <div class="card-body"> <%= store_count %> Stores</div>
                 <div class="card-footer d-flex align-items-center justify-content-between">
-                    <a class="small text-white stretched-link" href="#">View Details</a>
+                    <a class="small text-white stretched-link" href="/store_lists">View Details</a>
                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                 </div>
             </div>
