--- a/views/layouts/admin/sidebar.erb
+++ b/views/layouts/admin/sidebar.erb
@@ -24,6 +24,10 @@
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-user-tie"></i></div>
                         Seller Lists
                     </a>
+                    <a class="nav-link" href="/hidden_seller">
+                        <div class="sb-nav-link-icon"><i class="fa-solid fa-user"></i></div>
+                        Hidden Seller
+                    </a>
                     <a class="nav-link" href="/store_lists">
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-store"></i></div>
                         Store Lists
