--- a/views/seller/store_panel/view_store.erb
+++ b/views/seller/store_panel/view_store.erb
@@ -60,6 +60,8 @@
                 </div>
             </div>
             <!-- Back Button -->
+            <a class="btn btn-outline-primary float-end" href="#">Edit Store</a>
+            <!-- Back Button -->
             <a class="btn btn-outline-secondary float-start" href="/seller_dashboard/<%= @store['store_id']%>"><img src="/uploads/items/arrow-left-circle.svg" width="30px"/> Back</a>
         </div>
     </div>
