--- a/views/seller/store_panel/edit_my_store.erb
+++ b/views/seller/store_panel/edit_my_store.erb
@@ -1,12 +1,12 @@
 <div class="container-fluid px-4">
     <h1 class="mt-4">Dashboard</h1>
     <ol class="breadcrumb mb-4">
-        <li class="breadcrumb-item active">View Store Profile</li>
+        <li class="breadcrumb-item active">Edit Store Profile</li>
     </ol>
     <div class="card mb-4">
         <div class="card-header">
             <i class="fas fa-user me-1"></i>
-            View 
+            Edit <%= @store['store_name'] %> Store
         </div>
         <div class="card-body">
             <div class="mb-3 row">
