--- a/views/seller/store_panel/view_store.erb
+++ b/views/seller/store_panel/view_store.erb
@@ -6,7 +6,7 @@
     <div class="card mb-4">
         <div class="card-header">
             <i class="fas fa-user me-1"></i>
-            View 
+            View <%= @store['store_name'] %> Store
         </div>
         <div class="card-body">
             <div class="mb-3 row">
