--- a/views/seller/store_panel/edit_my_store.erb
+++ b/views/seller/store_panel/edit_my_store.erb
@@ -9,6 +9,21 @@
             Edit <%= @store['store_name'] %> Store
         </div>
         <div class="card-body">
+
+            <% if flash[:error] %>
+                <div class="alert alert-danger alert-dismissible fade show my-2" role="alert">
+                    <%= flash[:error] %>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            <% end %>
+
+            <% if flash[:success] %>
+                <div class="alert alert-success alert-dismissible fade show my-2" role="alert">
+                    <%= flash[:success] %>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            <% end %>
+
             <div class="mb-3 row">
                 <label for="name" class="col-sm-2 col-form-label">Owner Name</label>
                 <div class="col-sm-10">
@@ -33,8 +48,8 @@
                     <label for="store_status" class="col-sm-2 col-form-label">Store Status</label>
                     <div class="col-sm-10">
                         <select class="form-select" name="store_status" id="store_status">
-                            <option value="Active" <%= "selected" if @store['store_status'] == "Active" %>></option>
-                            <option value="Inactive" <%= "selected" if @store['store_status'] == "Inactive" %>></option>
+                            <option value="Active" <%= "selected" if @store['store_status'] == "Active" %>>Active</option>
+                            <option value="Inactive" <%= "selected" if @store['store_status'] == "Inactive" %>>Inactive</option>
                         </select>
                     </div>
                 </div>
