--- a/views/seller/store_panel/view_store.erb
+++ b/views/seller/store_panel/view_store.erb
@@ -9,6 +9,12 @@
             View <%= @store['store_name'] %> Store
         </div>
         <div class="card-body">
+            <% if flash[:success] %>
+                <div class="alert alert-success alert-dismissible fade show my-2" role="alert">
+                    <%= flash[:success] %>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            <% end %>
             <div class="mb-3 row">
                 <label for="name" class="col-sm-2 col-form-label">Owner Name</label>
                 <div class="col-sm-10">
