--- a/views/seller/seller_panel/index.erb
+++ b/views/seller/seller_panel/index.erb
@@ -62,7 +62,10 @@
 
             <% if store %>
                 <h5 class="card-title"><%= store['store_name'] %></h5>
-                <p class="card-text">Status : <%= store['store_status'] %></p>
+                <div class="card-text">
+                    <p>Status : <%= store['store_status'] %></p>
+                    <p>Store Address : <%= store['store_address'] %></p>
+                </div>
                 <a href="/store_bio/<%= store['store_id'] %>" class="btn btn-success">Store Bio</a>
             <% else %>
                 <h5 class="card-title">You Don't Have A Store</h5>
