fixing error in database syntax

--- a/views/seller/seller_items/item_lists.erb
+++ b/views/seller/seller_items/item_lists.erb
@@ -59,22 +59,20 @@
                     <tr>
                         <th>No</th>
                         <th>Item Name</th>
-                        <th>Type</th>
+                        <th>Category</th>
                         <th>Brand</th>
-                        <th>Size</th>
+                        <th>Unit</th>
+                        <th>Stock</th>
+                        <th>Price</th>
+                        <th>Description</th>
+                        <th>Photo</th>
                         <th>Status</th>
                     </tr>
                 </thead>
-                <tbody>
+                <!-- <tbody>
                     <tr>
-                        <td>1</td>
-                        <td>Panci</td>
-                        <td>Wajan</td>
-                        <td>Sanken</td>
-                        <td>80 cm</td>
-                        <td>Inactive</td>
                     </tr>
-                </tbody>
+                </tbody> -->
             </table>
         </div>
     </div>
