--- a/views/seller/seller_items/add_item.erb
+++ b/views/seller/seller_items/add_item.erb
@@ -16,7 +16,7 @@
                     </div>
                 <% end %>
             <% end %>
-            <form action="#" method="post" enctype="multipart/form-data">
+            <form action="/add_an_item/<%= current_user['user_id'] %>" method="post" enctype="multipart/form-data">
                 <div class="mb-3">
                     <input type="hidden" name="_method" value="post">
                 </div>
