update back button in add_item page

--- a/views/seller/seller_items/add_item.erb
+++ b/views/seller/seller_items/add_item.erb
@@ -121,7 +121,7 @@
             </form>
 
             <!-- Back Button -->
-            <a href="/item_lists/<% current_user['user_id'] %>"  class="btn btn-outline-secondary float-start">Back</a>
+            <a href="/item_lists/<%= current_user['user_id'] %>"  class="btn btn-outline-secondary float-start">Back</a>
         </div>
     </div>
 </div>
