--- a/views/seller/seller_items/add_item.erb
+++ b/views/seller/seller_items/add_item.erb
@@ -15,7 +15,7 @@
                 <div class="mb-3 row">
                     <label for="item_name" class="col-sm-2 col-form-label">Item Name</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="item_name" name="item_name"/>
+                        <input type="text" class="form-control" id="item_name" name="item_name" value="<%= params[:item_name] %>" />
                     </div>
                     <% if @errors.any? { |e| e.include?('Item Name')} %>
                         <div class="form-text text-danger">
@@ -26,7 +26,7 @@
                 <div class="mb-3 row">
                     <label for="item_brand" class="col-sm-2 col-form-label">Item Brand</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="item_brand" name="item_brand"/>
+                        <input type="text" class="form-control" id="item_brand" name="item_brand" value="<%= params[:item_brand] %>"/>
                     </div>
                     <% if @errors.any? { |e| e.include?('Item Brand')} %>
                         <div class="form-text text-danger">
@@ -37,7 +37,7 @@
                 <div class="mb-3 row">
                     <label for="item_description" class="col-sm-2 col-form-label">Description</label>
                     <div class="col-sm-10">
-                        <textarea class="form-control" id="item_description" name="item_description"></textarea>
+                        <textarea class="form-control" id="item_description" name="item_description" value="<%= params[:item_description] %>"><%= params[:item_description] %></textarea>
                     </div>
                     <% if @errors.any? { |e| e.include?('Item Description')} %>
                         <div class="form-text text-danger">
@@ -48,7 +48,7 @@
                 <div class="mb-3 row">
                     <label for="item_category" class="col-sm-2 col-form-label">Category</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="item_category" name="item_category">
+                        <input type="text" class="form-control" id="item_category" name="item_category" value="<%= params[:item_category] %>" >
                     </div>
                     <% if @errors.any? { |e| e.include?('Item Category')} %>
                         <div class="form-text text-danger">
@@ -59,7 +59,7 @@
                 <div class="mb-3 row">
                     <label for="item_unit" class="col-sm-2 col-form-label">Unit</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="item_unit" name="item_unit">
+                        <input type="text" class="form-control" id="item_unit" name="item_unit" value="<%= params[:item_unit] %>" >
                     </div>
                     <% if @errors.any? { |e| e.include?('Item Unit')} %>
                         <div class="form-text text-danger">
@@ -70,7 +70,7 @@
                 <div class="mb-3 row">
                     <label for="item_price" class="col-sm-2 col-form-label">Price</label>
                     <div class="col-sm-10">
-                        <input type="number" class="form-control" id="item_price" name="item_price">
+                        <input type="number" class="form-control" id="item_price" name="item_price" value="<%= params[:item_price] %>">
                     </div>
                     <% if @errors.any? { |e| e.include?('Item Price')} %>
                         <div class="form-text text-danger">
@@ -81,7 +81,7 @@
                 <div class="mb-3 row">
                     <label for="item_stock" class="col-sm-2 col-form-label">Stock</label>
                     <div class="col-sm-10">
-                        <input type="number" class="form-control" id="item_stock" name="item_stock">
+                        <input type="number" class="form-control" id="item_stock" name="item_stock" value="<%= params[:item_stock] %>">
                     </div>
                     <% if @errors.any? { |e| e.include?('Item Stock')} %>
                         <div class="form-text text-danger">
@@ -92,8 +92,8 @@
                 <div class="mb-3 row">
                     <label for="item_status" class="col-sm-2 col-form-label">Status</label>
                     <div class="col-sm-10">
-                        <select class="form-select" id="item_status" name="item_status">
-                            <option value="" disabled selected>Open this select menu</option>
+                        <select class="form-select" id="item_status" name="item_status" value="<%= params[:item_status] %>" >
+                            <option value="<%= params[:item_status] %>" disabled selected>Open this select menu</option>
                             <option value="Active">Active</option>
                             <option value="Inactive">Inactive</option>
                         </select>
