--- a/views/seller/seller_items/add_item.erb
+++ b/views/seller/seller_items/add_item.erb
@@ -37,7 +37,7 @@
                 <div class="mb-3 row">
                     <label for="item_description" class="col-sm-2 col-form-label">Description</label>
                     <div class="col-sm-10">
-                        <textarea class="form-control" id="item_description" name="item_description" value="<%= params[:item_description] %>"><%= params[:item_description] %></textarea>
+                        <textarea class="form-control" id="item_description" name="item_description"><%= params[:item_description] %></textarea>
                     </div>
                     <% if @errors.any? { |e| e.include?('Item Description')} %>
                         <div class="form-text text-danger">
@@ -104,10 +104,10 @@
                 <div class="mb-3 row">
                     <label for="item_status" class="col-sm-2 col-form-label">Status</label>
                     <div class="col-sm-10">
-                        <select class="form-select" id="item_status" name="item_status" value="<%= params[:item_status] %>" >
-                            <option value="<%= params[:item_status] %>" disabled selected>Open this select menu</option>
-                            <option value="Active">Active</option>
-                            <option value="Inactive">Inactive</option>
+                        <select class="form-select" id="item_status" name="item_status">
+                            <option disabled <%= params[:item_status].nil? || params[:item_status].empty? ? 'selected' : '' %> >Open this select menu</option>
+                            <option value="Active" <%= params[:item_status] == "Active" ? "selected" : "" %>>Active</option>
+                            <option value="Inactive" <%= params[:item_status] == "Inactive" ? "selected" : "" %>>Inactive</option>
                         </select>
                     </div>
                     <% if @errors.any? { |e| e.include?('Item Status')} %>
